# hermit

./: .gitignore  Cargo.toml  GUIDE.md  LICENSE  build.rs  hermit.toml
.hermit/: home-files
hermit-tests/: Cargo.toml
hermit-tests/src/: lib.rs
hermit-tests/tests/: cli.rs  config.rs  config_loader.rs  edit_config.rs  fdpass.rs  landlock.rs  learn_convert.rs  namespace.rs  netns.rs  process.rs  sandbox.rs  signature.rs  trust.rs
sni-proxy/: Cargo.toml
sni-proxy-tests/: Cargo.toml
sni-proxy-tests/src/: lib.rs
sni-proxy-tests/tests/: block_log.rs  bypass_tcp.rs  bypass_udp.rs  ca.rs  connector.rs  conntrack.rs  credential.rs  dispatch.rs  dns.rs  dns_cache.rs  dns_forwarder.rs  forward.rs  http_body.rs  http_headers.rs  http_parse.rs  http_responder.rs  learn_observer.rs  match_dsl.rs  mitm.rs  network_policy.rs  policy_method.rs  policy_rule.rs  policy_ruleset.rs  proxy.rs  sni.rs  splice.rs
sni-proxy/fuzz/: Cargo.toml  README.md
sni-proxy/fuzz/fuzz_targets/: dns_answers.rs  dns_query.rs  http_request.rs  http_response.rs  set_header.rs  sni.rs
sni-proxy/fuzz/seed/dns_answers/: 01_a_record  02_no_answer_section
sni-proxy/fuzz/seed/dns_query/: 02_aaaa_example_com  03_a_long_label
sni-proxy/fuzz/seed/http_request/: 02_post_with_cl  03_smuggling_cl_te  04_smuggling_double_te  06_absolute_form
sni-proxy/fuzz/seed/http_response/: 02_401  04_smuggling_double_cl
sni-proxy/fuzz/seed/sni/: 01_localhost  02_long_host  03_short_record  04_no_sni_extension
sni-proxy/src/: block_log.rs  bypass_tcp.rs  bypass_udp.rs  ca.rs  connector.rs  conntrack.rs  credential.rs  dispatch.rs  dns.rs  dns_cache.rs  dns_forwarder.rs  forward.rs  http.rs  http_proxy.rs  learn_observer.rs  lib.rs  main.rs  match_dsl.rs  mitm.rs  network_policy.rs  policy.rs  proxy.rs  sni.rs  splice.rs  timeouts.rs  transparent.rs
sni-proxy/src/http/: body.rs  headers.rs  mod.rs  parse.rs  responder.rs
sni-proxy/src/policy/: method.rs  mod.rs  rule.rs  ruleset.rs
sni-proxy/tests/: block_log.rs  credential_injection.rs  fuzz_corpus_smoke.rs  integration.rs  mitm_e2e.rs
src/: cli.rs  config.rs  config_loader.rs  edit_config.rs  fdpass.rs  home_files.rs  landlock.rs  learn_convert.rs  lib.rs  main.rs  namespace.rs  netns.rs  pasta.rs  process.rs  sandbox.rs  signature.rs  trust.rs
tests/: integration_test.rs  signed_config.rs
