[workspace]
members = ["sni-proxy"]

[package]
name = "hermit"
version = "0.1.0"
edition = "2021"
description = "Lightweight container/sandbox tool for build commands"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
landlock = "0.4"
nix = { version = "0.29", features = ["sched", "mount", "process", "user", "signal"] }
libc = "0.2"
which = "7"
sni-proxy = { path = "sni-proxy" }
tokio = { version = "1", features = ["rt-multi-thread", "net"] }

[dev-dependencies]
tempfile = "3"
which = "7"
