[workspace]
members = ["sni-proxy"]

[package]
name = "hermit"
version = "0.1.0"
edition = "2021"
description = "Lightweight container/sandbox tool for build commands"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
landlock = "0.4"
nix = { version = "0.29", features = ["sched", "mount", "process", "user", "signal", "socket", "net", "time"] }
libc = "0.2"
rustables = "0.8"
sni-proxy = { path = "sni-proxy" }
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ed25519-dalek = { version = "2", features = ["pem", "pkcs8"] }
x509-parser = "0.16"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
url = "2"
base64 = "0.22"
pem = "3"
rcgen = "0.13"

[dev-dependencies]
tempfile = "3"
which = "7"
