[package]
name = "hermit-tests"
version = "0.0.0"
edition = "2021"
publish = false
description = "Dedicated test crate for hermit. Holds tests that previously lived as `#[cfg(test)] mod tests` blocks inside hermit's src files."

# This crate produces no binary; every test lives under tests/<file>.rs
# and runs as a separate Cargo integration-test binary against
# hermit's library + the __test_internals feature, which re-exports
# items that would otherwise be private to hermit.
[lib]
path = "src/lib.rs"

[dependencies]
hermit = { path = "..", features = ["__test_internals"] }

[dev-dependencies]
anyhow = "1"
tempfile = "3"
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
nix = { version = "0.29", features = ["sched", "mount", "process", "user", "signal", "socket", "net", "time"] }
libc = "0.2"
log = "0.4"
rcgen = "0.13"
ed25519-dalek = { version = "2", features = ["pem", "pkcs8"] }
url = "2"
which = "7"
tokio = { version = "1", features = ["full"] }
rustables = "0.8"
