[package]
name = "sni-proxy-tests"
version = "0.0.0"
edition = "2021"
publish = false
description = "Dedicated test crate for sni-proxy. Holds tests that previously lived as `#[cfg(test)] mod tests` blocks inside sni-proxy's src files."

[lib]
path = "src/lib.rs"

[dependencies]
sni-proxy = { path = "../sni-proxy", features = ["__test_internals"] }

[dev-dependencies]
anyhow = "1"
tempfile = "3"
httparse = "1"
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rcgen = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
http = "1"
